--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -3188,7 +3188,7 @@ Response option for `rqa`, `rqb`, `rqc`, `rqd`.
 
 ```{r ARQ-label-table-2, results = 'asis'}
 
-arq_label_df <- data.frame(
+arq_label_df2 <- data.frame(
   value = c("1", "2", "3", "4", "5", "6", "7"),
   label = c("Disagree Strongly",
             "",
@@ -3202,11 +3202,11 @@ arq_label_df <- data.frame(
   as.data.frame()
 
 
-arq_label_df <- setNames(arq_label_df[-1, ], unlist(arq_label_df[1, ]))
+arq_label_df2 <- setNames(arq_label_df2[-1, ], unlist(arq_label_df2[1, ]))
 
 
 #create table
-arq_label_table <- arq_label_df %>%
+arq_label_table2 <- arq_label_df2 %>%
   gt() %>% 
   tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
               table.border.left.width = 1, table.border.right.width = 1) %>% 
@@ -3215,7 +3215,7 @@ arq_label_table <- arq_label_df %>%
   apply_labtab_theme()
 
 # Print the table
-print(arq_label_table)
+print(arq_label_table2)
 
 
 ```
@@ -6793,5 +6793,192 @@ socinf_gen_tbl <- socinf_gen_summary_data %>%
 
 # Render the table
 socinf_gen_tbl
+
+```
+
+
+
+# CTS Parent Child 
+<MARIA: you might want to switch this to full name to be consistent with other measure.> 
+  
+  
+### CTS Parent Child  Description
+  
+  <MARIA> please insert a breif description for this measure 
+
+
+* All items need to be reverse scored. 
+
+* This is not a a standardized questionnaire, so missing data rule was not applied. And no subscale was computed. 
+
+
+
+Reference:
+  <Maria, please add a reference if needed> 
+  
+### CTS Parent Child  Variables
+  
+#### Value Labels
+
+Response options for `cts parent screen`
+
+```{r cts_pc-label-table, results = 'asis'}
+
+cts_pc_label_df <- data.frame(
+  value = c("1", "2"),
+  label = c("Yes",
+            "No")
+) %>% 
+  t() %>% 
+  as.data.frame()
+
+
+cts_pc_label_df <- setNames(cts_pc_label_df[-1, ], unlist(cts_pc_label_df[1, ]))
+
+
+#create table
+cts_pc_label_table <- cts_pc_label_df %>%
+  gt() %>% 
+  tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
+              table.border.left.width = 1, table.border.right.width = 1) %>% 
+  #cols_width(everything() ~ pct(100)) %>% 
+  tab_options(table.width = pct(100))%>%
+  apply_labtab_theme()
+
+# Print the table
+print(cts_pc_label_table)
+
+
+```
+
+Response option for `a1` to  `a23`.
+
+```{r cts_pc-label-table-2, results = 'asis'}
+
+cts_pc_label_df2 <- data.frame(
+  value = c("0", "1", "2", "3", "4", "5", "6", "7", "-77"),
+  label = c("None - has never happened/None",
+            "Once",
+            "Twice",
+            "3-5 times",
+            "6-10 times",
+            "11-20 times",
+            "More than 20 times",
+            "Not in the past year, but it happened before",
+            "Decline to Answer")
+) %>% 
+  t() %>% 
+  as.data.frame()
+
+
+cts_pc_label_df2 <- setNames(cts_pc_label_df2[-1, ], unlist(cts_pc_label_df2[1, ]))
+
+
+#create table
+cts_pc_label_table2 <- cts_pc_label_df2 %>%
+  gt() %>% 
+  tab_options(table.border.top.width = 1, table.border.bottom.width = 1,
+              table.border.left.width = 1, table.border.right.width = 1) %>% 
+  #cols_width(everything() ~ px(180)) %>% 
+  tab_options(table.width = pct(100))%>%
+  apply_labtab_theme()
+
+# Print the table
+print(cts_pc_label_table2)
+
+
+```
+  
+####
+CTS Parent Child  survey items are presented in the following table:
+  
+Leading question: Thinking about your partner, how often is it true that they:
+```{r cts_pc-var-prep}
+# Pull question wording from Qualtrics data
+cts_pc_word <- qualtrics %>% 
+  select(`CTS PARENT SCREEN`:A23) %>%
+  slice(1)
+
+#create table with variable name, description, and notes
+cts_pc_word_long <- cts_pc_word %>% 
+  pivot_longer(cols = everything(), 
+               names_to = "var_name",
+               values_to = "description") %>% 
+  mutate(description = str_replace(description, "^\\d+\\.\\s*", ""),
+         description = str_replace(description, "\\d+[a-zA-Z]\\. ", ""),
+         var_name = str_to_lower(var_name),
+         notes = as.character("")) %>% 
+  # Edits Variable description and value
+  mutate(description = if_else(var_name == "cts parent screen", "Have you parented a child (under 18) in the past year?", description)) %>%
+  mutate(notes = if_else(var_name %in% c("a1", "a2", "a3", "a4", "a5", "a6",
+                                         "a7",  "a8",  "a9",  "a10" , "a11",  "a12" , "a13",              
+                                        "a14", "a15", "a16", "a17"  ,"a18" , "a19"  ,"a20",              
+                                        "a21", "a22", "a23"), paste0("This item should be reverse scored. `", var_name, "_r` is reverse scored"), notes)) 
+
+```
+
+```{r cts_pc-var-table, results ='asis'}
+# Create the gt table object and apply generic theme
+cts_pc_gt_table <- gt(cts_pc_word_long)
+
+# Table-specific formatting (col width, names)
+cts_pc_gt_table <- cts_pc_gt_table %>% 
+  cols_label(var_name = "Variable", 
+             description = "Description"
+             #notes = "Notes"
+  ) %>% 
+  apply_tbl_theme() %>% 
+  cols_width(description ~ px(300),
+             var_name ~ px(100)
+  ) %>%
+  tab_style(style = cell_text(align = "left"), locations = cells_column_labels())
+
+# Print the table
+print(cts_pc_gt_table)
+```
+
+### Summary Statistics
+
+#### Descriptive Statistics
+
+Only missing percentage are presented 
+
+```{r cts_pc-missing}
+# Create subset of BSI items
+cts_pc_data_subset <- complete %>%
+  select(cts_parent_screen:a23)
+
+# Calculate the summary statistics for each variable
+## mean is showing 2 decimals per authors
+cts_pc_summary_data <- lapply(cts_pc_data_subset, function(x) {
+  x <- replace(x, x < -40, NA)
+  mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
+  sd_val <- round(sd(x, na.rm = TRUE), 2)
+  range_val <- paste(min(x, na.rm = TRUE), max(x, na.rm = TRUE), sep = "-")
+  miss_val <- round(mean(is.na(x)) * 100, 2)
+  c(Mean = mean_val, SD = sd_val, Range = range_val, Missing = paste(miss_val, "%", sep = ""))
+})
+
+# Convert summary_data to a data frame
+cts_pc_summary_data <- as.data.frame(cts_pc_summary_data)
+
+# Set items as first row
+cts_pc_summary_data <- rbind(names(cts_pc_summary_data), cts_pc_summary_data) %>% 
+  t() %>% 
+  as.data.frame()
+
+# Create the gt table
+cts_pc_tbl <- cts_pc_summary_data %>%
+  gt() %>%
+  cols_label(`1` = "Variable",
+             Missing = "% Missing") %>% 
+   cols_width(everything() ~ pct(100)) %>%
+  cols_align(columns = c("Missing"), align = "left") %>% 
+  tab_footnote("*Range of data values") %>% 
+  tab_options(table.border.bottom.style = "hidden") %>%
+  apply_tbl_theme()
+
+# Render the table
+cts_pc_tbl
 
 ```
